; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-rspi.c_rspi_read_data.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-rspi.c_rspi_read_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rspi_data = type { i64 }

@RSPI_SPDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rspi_data*)* @rspi_read_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rspi_read_data(%struct.rspi_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rspi_data*, align 8
  store %struct.rspi_data* %0, %struct.rspi_data** %3, align 8
  %4 = load %struct.rspi_data*, %struct.rspi_data** %3, align 8
  %5 = getelementptr inbounds %struct.rspi_data, %struct.rspi_data* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.rspi_data*, %struct.rspi_data** %3, align 8
  %10 = load i32, i32* @RSPI_SPDR, align 4
  %11 = call i32 @rspi_read8(%struct.rspi_data* %9, i32 %10)
  store i32 %11, i32* %2, align 4
  br label %16

12:                                               ; preds = %1
  %13 = load %struct.rspi_data*, %struct.rspi_data** %3, align 8
  %14 = load i32, i32* @RSPI_SPDR, align 4
  %15 = call i32 @rspi_read16(%struct.rspi_data* %13, i32 %14)
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %12, %8
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @rspi_read8(%struct.rspi_data*, i32) #1

declare dso_local i32 @rspi_read16(%struct.rspi_data*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
